--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,7 @@ authors = ["Leandro Pacheco <contact@leandropacheco.com>"]
 
 [dependencies]
 libc = "0.2"
+futures = "0.1"
 
 [build-dependencies]
 gcc = "0.3"
