--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,12 @@ authors = ["Leandro Pacheco <contact@leandropacheco.com>"]
 
 [dependencies]
 libc = "0.2"
-futures = "0.1"
+error-chain = "0.10"
+
+futures = "0.1.15"
+tokio-core = "0.1"
+tokio-io = "0.1"
+tokio-timer = "0.1"
 
 [build-dependencies]
 gcc = "0.3"
