--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ futures = "0.1.15"
 tokio-core = "0.1"
 tokio-io = "0.1"
 tokio-timer = "0.1"
+tokio-service = "0.1"
 
 [build-dependencies]
 gcc = "0.3"
